--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Hello World</p>
+    <div class="container">
+        <div class="header">
+            <h1>Algeo Lens</h1>
+        </div>
+        <div class="content">
+            <div class="left">
+                <div class="image">
+                    <img src="meme.jpeg" alt="meme.jpeg">
+                </div>
+                <div class="button">
+                    <button type="button">Take a Photo</button>
+                    <button type="button">Upload Image</button>
+                    <button type="button">Select Dataset</button>
+                </div>
+            </div>
+            <div class="right">
+                <div class="image box">
+                    <div class="top image box">
+
+                    </div>
+                    <div class="body image box">
+
+                    </div>
+                    <div class="bottom image box">
+                        <button type="button">Download Image</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
 </body>
 </html>
