--- a/src/web/index.html
+++ b/src/web/index.html
@@ -13,7 +13,7 @@
     <div class="main-container">
         <div class="input-container">
             <div class="input-div">
-                <img class="placeholder-img" src="placeholder-img.webp" alt="Placeholder Image">
+                <img class="placeholder-img" src="../placeholder-img.webp" alt="Placeholder Image">
                 <div class="button">
                     <form action="/" method="post" enctype="multipart/form-data">
                         <label for="image">Take a photo</label>
@@ -47,16 +47,14 @@
                 <span class="right-text">Texture</span>
             </div>
             <div class="scrollbar-image">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
-                <img src="meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
+                <img src="../meme.jpeg" alt="meme">
             </div>
             <div class="button">
                 <button class="download-button">Download</button>
