--- a/src/web/index.html
+++ b/src/web/index.html
@@ -13,7 +13,7 @@
     <div class="main-container">
         <div class="input-container">
             <div class="input-div">
-                <img class="placeholder-img" src="../placeholder-img.webp" alt="Placeholder Image">
+                <img class="placeholder-img" src="../img/images/placeholder-img.webp" alt="Placeholder Image">
                 <div class="button">
                     <form action="/" method="post" enctype="multipart/form-data">
                         <label for="image">Take a photo</label>
@@ -46,16 +46,50 @@
                 </label>
                 <span class="right-text">Texture</span>
             </div>
-            <div class="scrollbar-image">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
-                <img src="../meme.jpeg" alt="meme">
+            <div class="gallery">
+                <div class="image-container">
+                    <div class="image-item">
+
+                <!-- TEST IMAGE -->
+
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <div class="caption">meme</div>
+                        </div>
+                    </div>
+                    <div class="pagination">
+                        <div class="prev">Prev</div>
+                        <div class="page">Page <span class="page-num"></span></div>
+                        <div class="next">Next</div>
+                    </div>
+                </div>
             </div>
+                <!-- TEST IMAGE -->
+
             <div class="button">
                 <button class="download-button">Download</button>
             </div>
@@ -66,5 +100,6 @@
             <li ></li>
         </ul>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
