--- a/src/web/index.html
+++ b/src/web/index.html
@@ -14,20 +14,23 @@
         <div class="input-container">
             <div class="input-div">
                 <img class="placeholder-img" src="../img/images/placeholder-img.webp" alt="Placeholder Image">
+
+
                 <div class="button">
-                    <form action="/" method="post" enctype="multipart/form-data">
+                    <form action="index.php" method="post" enctype="multipart/form-data">
                         <label for="image">Take a photo</label>
                         <input type="file" name="image" id="image" accept="image/*" required>
                         <button type="submit">Upload</button>
                     </form>
                 </div>
+
                 <div class="button">
-                    <form action="/" method="post" enctype="multipart/form-data">
-                        <label for="image">Choose an image</label>
-                        <input type="file" name="image" id="image" accept="image/*" required>
-                        <button type="submit">Upload</button>
+                    <form action="index.php" method="post" enctype="multipart/form-data">
+                        <input type="file" name="up_image" id="up_image">
+                        <input type="submit" value="Upload file" name="submit">
                     </form>
                 </div>
+
                 <div class="button">
                     <form action="/upload" method="post" enctype="multipart/form-data">
                         <label for="dataset">Choose a dataset</label>
@@ -46,40 +49,106 @@
                 </label>
                 <span class="right-text">Texture</span>
             </div>
-            <div class="gallery">
-                <div class="image-container">
-                    <div class="image-item">
 
-                <!-- TEST IMAGE -->
-
+            <section class="gallery">
+                <div class="container">
+                    <div class="gallery-items">
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
                         <div class="item">
-                            <img src="../img/images/meme.jpeg" alt="meme">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
                             <div class="caption">meme</div>
                         </div>
+                        <div class="item">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/megumikato.jpg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>
+                        <div class="item">
+                            <img src="../img/meme.jpeg" alt="gallery" />
+                            <div class="caption">meme</div>
+                        </div>  
                     </div>
                     <div class="pagination">
                         <div class="prev">Prev</div>
@@ -87,9 +156,8 @@
                         <div class="next">Next</div>
                     </div>
                 </div>
-            </div>
-                <!-- TEST IMAGE -->
-
+            </section>
+                
             <div class="button">
                 <button class="download-button">Download</button>
             </div>
@@ -100,6 +168,7 @@
             <li ></li>
         </ul>
     </div>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
     <script src="script.js"></script>
 </body>
 </html>
